taack-jdbc-common/src/main/java/taack/jdbc/common/tql/gen/TQLParser.java
// Generated from TQL.g4 by ANTLR 4.13.1
package taack.jdbc.common.tql.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, IN_ELEMENTS=7, SELECT=8, 
		FROM=9, WHERE=10, GROUP_BY=11, AND=12, OR=13, AS=14, BOOLEAN_LITTERAL=15, 
		COUNT=16, SUM=17, DISTINCT=18, ELEMENTS=19, TABLE_NAME=20, TABLE_STAR=21, 
		COLUMN_NAME_FRAGMANT=22, COLUMN_NAME_POINTED=23, STRING=24, NEGAT=25, 
		PLUS=26, MINUS=27, TIMES=28, DIV=29, GT=30, GE=31, LT=32, LE=33, EQ=34, 
		POW=35, PI=36, LPAREN=37, RPAREN=38, SCIENTIFIC_NUMBER=39, WS=40;
	public static final int
		RULE_tql = 0, RULE_selectStar = 1, RULE_selectExpression = 2, RULE_groupByExpression = 3, 
		RULE_selectFunctionExpression = 4, RULE_fromExpression = 5, RULE_idTableWithAlias = 6, 
		RULE_idTable = 7, RULE_selFunc = 8, RULE_columnExpression = 9, RULE_aliasColumn = 10, 
		RULE_aliasTable = 11, RULE_idTableStar = 12, RULE_idColumn = 13, RULE_whereClause = 14, 
		RULE_whereExpression = 15, RULE_whereExpressionElement = 16, RULE_junctionOp = 17, 
		RULE_additionalExpression = 18, RULE_multiplyingExpression = 19, RULE_powExpression = 20, 
		RULE_signedAtom = 21, RULE_atom = 22, RULE_scientific = 23, RULE_relOp = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"tql", "selectStar", "selectExpression", "groupByExpression", "selectFunctionExpression", 
			"fromExpression", "idTableWithAlias", "idTable", "selFunc", "columnExpression", 
			"aliasColumn", "aliasTable", "idTableStar", "idColumn", "whereClause", 
			"whereExpression", "whereExpressionElement", "junctionOp", "additionalExpression", 
			"multiplyingExpression", "powExpression", "signedAtom", "atom", "scientific", 
			"relOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'IS NULL'", "'is null'", "'IS NOT NULL'", "'is not null'", 
			"'in elements'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'!'", "'+'", "'-'", 
			"'*'", "'/'", "'>'", "'>='", "'<'", "'<='", "'='", "'^'", "'pi'", "'('", 
			"')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "IN_ELEMENTS", "SELECT", "FROM", 
			"WHERE", "GROUP_BY", "AND", "OR", "AS", "BOOLEAN_LITTERAL", "COUNT", 
			"SUM", "DISTINCT", "ELEMENTS", "TABLE_NAME", "TABLE_STAR", "COLUMN_NAME_FRAGMANT", 
			"COLUMN_NAME_POINTED", "STRING", "NEGAT", "PLUS", "MINUS", "TIMES", "DIV", 
			"GT", "GE", "LT", "LE", "EQ", "POW", "PI", "LPAREN", "RPAREN", "SCIENTIFIC_NUMBER", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TqlContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(TQLParser.SELECT, 0); }
		public TerminalNode FROM() { return getToken(TQLParser.FROM, 0); }
		public FromExpressionContext fromExpression() {
			return getRuleContext(FromExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TQLParser.EOF, 0); }
		public SelectStarContext selectStar() {
			return getRuleContext(SelectStarContext.class,0);
		}
		public SelectExpressionContext selectExpression() {
			return getRuleContext(SelectExpressionContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(TQLParser.WHERE, 0); }
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public TerminalNode GROUP_BY() { return getToken(TQLParser.GROUP_BY, 0); }
		public GroupByExpressionContext groupByExpression() {
			return getRuleContext(GroupByExpressionContext.class,0);
		}
		public TqlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tql; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterTql(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitTql(this);
		}
	}

	public final TqlContext tql() throws RecognitionException {
		TqlContext _localctx = new TqlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_tql);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(SELECT);
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TIMES:
				{
				setState(51);
				selectStar();
				}
				break;
			case BOOLEAN_LITTERAL:
			case COUNT:
			case SUM:
			case DISTINCT:
			case ELEMENTS:
			case TABLE_STAR:
			case COLUMN_NAME_POINTED:
			case STRING:
			case NEGAT:
			case PLUS:
			case MINUS:
			case LPAREN:
			case SCIENTIFIC_NUMBER:
				{
				setState(52);
				selectExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(55);
			match(FROM);
			setState(56);
			fromExpression();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(57);
				match(WHERE);
				setState(58);
				whereClause();
				}
			}

			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUP_BY) {
				{
				setState(61);
				match(GROUP_BY);
				setState(62);
				groupByExpression();
				}
			}

			setState(65);
			match(T__0);
			setState(66);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStarContext extends ParserRuleContext {
		public TerminalNode TIMES() { return getToken(TQLParser.TIMES, 0); }
		public SelectStarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelectStar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelectStar(this);
		}
	}

	public final SelectStarContext selectStar() throws RecognitionException {
		SelectStarContext _localctx = new SelectStarContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectStar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(TIMES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectExpressionContext extends ParserRuleContext {
		public List<IdTableStarContext> idTableStar() {
			return getRuleContexts(IdTableStarContext.class);
		}
		public IdTableStarContext idTableStar(int i) {
			return getRuleContext(IdTableStarContext.class,i);
		}
		public List<SelectFunctionExpressionContext> selectFunctionExpression() {
			return getRuleContexts(SelectFunctionExpressionContext.class);
		}
		public SelectFunctionExpressionContext selectFunctionExpression(int i) {
			return getRuleContext(SelectFunctionExpressionContext.class,i);
		}
		public List<ColumnExpressionContext> columnExpression() {
			return getRuleContexts(ColumnExpressionContext.class);
		}
		public ColumnExpressionContext columnExpression(int i) {
			return getRuleContext(ColumnExpressionContext.class,i);
		}
		public SelectExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelectExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelectExpression(this);
		}
	}

	public final SelectExpressionContext selectExpression() throws RecognitionException {
		SelectExpressionContext _localctx = new SelectExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TABLE_STAR:
				{
				setState(70);
				idTableStar();
				}
				break;
			case COUNT:
			case SUM:
			case DISTINCT:
			case ELEMENTS:
				{
				setState(71);
				selectFunctionExpression();
				}
				break;
			case BOOLEAN_LITTERAL:
			case COLUMN_NAME_POINTED:
			case STRING:
			case NEGAT:
			case PLUS:
			case MINUS:
			case LPAREN:
			case SCIENTIFIC_NUMBER:
				{
				setState(72);
				columnExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(75);
				match(T__1);
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COUNT:
				case SUM:
				case DISTINCT:
				case ELEMENTS:
					{
					setState(76);
					selectFunctionExpression();
					}
					break;
				case BOOLEAN_LITTERAL:
				case COLUMN_NAME_POINTED:
				case STRING:
				case NEGAT:
				case PLUS:
				case MINUS:
				case LPAREN:
				case SCIENTIFIC_NUMBER:
					{
					setState(77);
					columnExpression();
					}
					break;
				case TABLE_STAR:
					{
					setState(78);
					idTableStar();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupByExpressionContext extends ParserRuleContext {
		public List<SelectFunctionExpressionContext> selectFunctionExpression() {
			return getRuleContexts(SelectFunctionExpressionContext.class);
		}
		public SelectFunctionExpressionContext selectFunctionExpression(int i) {
			return getRuleContext(SelectFunctionExpressionContext.class,i);
		}
		public List<ColumnExpressionContext> columnExpression() {
			return getRuleContexts(ColumnExpressionContext.class);
		}
		public ColumnExpressionContext columnExpression(int i) {
			return getRuleContext(ColumnExpressionContext.class,i);
		}
		public GroupByExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupByExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterGroupByExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitGroupByExpression(this);
		}
	}

	public final GroupByExpressionContext groupByExpression() throws RecognitionException {
		GroupByExpressionContext _localctx = new GroupByExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_groupByExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COUNT:
			case SUM:
			case DISTINCT:
			case ELEMENTS:
				{
				setState(86);
				selectFunctionExpression();
				}
				break;
			case BOOLEAN_LITTERAL:
			case COLUMN_NAME_POINTED:
			case STRING:
			case NEGAT:
			case PLUS:
			case MINUS:
			case LPAREN:
			case SCIENTIFIC_NUMBER:
				{
				setState(87);
				columnExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(90);
				match(T__1);
				setState(93);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COUNT:
				case SUM:
				case DISTINCT:
				case ELEMENTS:
					{
					setState(91);
					selectFunctionExpression();
					}
					break;
				case BOOLEAN_LITTERAL:
				case COLUMN_NAME_POINTED:
				case STRING:
				case NEGAT:
				case PLUS:
				case MINUS:
				case LPAREN:
				case SCIENTIFIC_NUMBER:
					{
					setState(92);
					columnExpression();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectFunctionExpressionContext extends ParserRuleContext {
		public SelFuncContext selFunc() {
			return getRuleContext(SelFuncContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(TQLParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(TQLParser.RPAREN, 0); }
		public IdColumnContext idColumn() {
			return getRuleContext(IdColumnContext.class,0);
		}
		public AdditionalExpressionContext additionalExpression() {
			return getRuleContext(AdditionalExpressionContext.class,0);
		}
		public TerminalNode TIMES() { return getToken(TQLParser.TIMES, 0); }
		public SelectFunctionExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectFunctionExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelectFunctionExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelectFunctionExpression(this);
		}
	}

	public final SelectFunctionExpressionContext selectFunctionExpression() throws RecognitionException {
		SelectFunctionExpressionContext _localctx = new SelectFunctionExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectFunctionExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			selFunc();
			setState(101);
			match(LPAREN);
			setState(105);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(102);
				idColumn();
				}
				break;
			case 2:
				{
				setState(103);
				additionalExpression();
				}
				break;
			case 3:
				{
				setState(104);
				match(TIMES);
				}
				break;
			}
			setState(107);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FromExpressionContext extends ParserRuleContext {
		public List<IdTableWithAliasContext> idTableWithAlias() {
			return getRuleContexts(IdTableWithAliasContext.class);
		}
		public IdTableWithAliasContext idTableWithAlias(int i) {
			return getRuleContext(IdTableWithAliasContext.class,i);
		}
		public List<IdTableContext> idTable() {
			return getRuleContexts(IdTableContext.class);
		}
		public IdTableContext idTable(int i) {
			return getRuleContext(IdTableContext.class,i);
		}
		public FromExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterFromExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitFromExpression(this);
		}
	}

	public final FromExpressionContext fromExpression() throws RecognitionException {
		FromExpressionContext _localctx = new FromExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_fromExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(109);
				idTableWithAlias();
				}
				break;
			case 2:
				{
				setState(110);
				idTable();
				}
				break;
			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(113);
				match(T__1);
				setState(116);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(114);
					idTableWithAlias();
					}
					break;
				case 2:
					{
					setState(115);
					idTable();
					}
					break;
				}
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdTableWithAliasContext extends ParserRuleContext {
		public IdTableContext idTable() {
			return getRuleContext(IdTableContext.class,0);
		}
		public AliasTableContext aliasTable() {
			return getRuleContext(AliasTableContext.class,0);
		}
		public TerminalNode AS() { return getToken(TQLParser.AS, 0); }
		public IdTableWithAliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idTableWithAlias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterIdTableWithAlias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitIdTableWithAlias(this);
		}
	}

	public final IdTableWithAliasContext idTableWithAlias() throws RecognitionException {
		IdTableWithAliasContext _localctx = new IdTableWithAliasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_idTableWithAlias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(123);
				idTable();
				setState(124);
				aliasTable();
				}
				break;
			case 2:
				{
				setState(126);
				idTable();
				setState(127);
				match(AS);
				setState(128);
				aliasTable();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdTableContext extends ParserRuleContext {
		public TerminalNode TABLE_NAME() { return getToken(TQLParser.TABLE_NAME, 0); }
		public IdTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterIdTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitIdTable(this);
		}
	}

	public final IdTableContext idTable() throws RecognitionException {
		IdTableContext _localctx = new IdTableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_idTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(TABLE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelFuncContext extends ParserRuleContext {
		public TerminalNode COUNT() { return getToken(TQLParser.COUNT, 0); }
		public TerminalNode DISTINCT() { return getToken(TQLParser.DISTINCT, 0); }
		public TerminalNode ELEMENTS() { return getToken(TQLParser.ELEMENTS, 0); }
		public TerminalNode SUM() { return getToken(TQLParser.SUM, 0); }
		public SelFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selFunc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterSelFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitSelFunc(this);
		}
	}

	public final SelFuncContext selFunc() throws RecognitionException {
		SelFuncContext _localctx = new SelFuncContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_selFunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 983040L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnExpressionContext extends ParserRuleContext {
		public IdColumnContext idColumn() {
			return getRuleContext(IdColumnContext.class,0);
		}
		public AdditionalExpressionContext additionalExpression() {
			return getRuleContext(AdditionalExpressionContext.class,0);
		}
		public TerminalNode AS() { return getToken(TQLParser.AS, 0); }
		public AliasColumnContext aliasColumn() {
			return getRuleContext(AliasColumnContext.class,0);
		}
		public ColumnExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterColumnExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitColumnExpression(this);
		}
	}

	public final ColumnExpressionContext columnExpression() throws RecognitionException {
		ColumnExpressionContext _localctx = new ColumnExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_columnExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(136);
				idColumn();
				}
				break;
			case 2:
				{
				setState(137);
				additionalExpression();
				}
				break;
			}
			setState(142);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(140);
				match(AS);
				setState(141);
				aliasColumn();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasColumnContext extends ParserRuleContext {
		public TerminalNode COLUMN_NAME_FRAGMANT() { return getToken(TQLParser.COLUMN_NAME_FRAGMANT, 0); }
		public AliasColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasColumn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterAliasColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitAliasColumn(this);
		}
	}

	public final AliasColumnContext aliasColumn() throws RecognitionException {
		AliasColumnContext _localctx = new AliasColumnContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_aliasColumn);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(COLUMN_NAME_FRAGMANT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AliasTableContext extends ParserRuleContext {
		public TerminalNode COLUMN_NAME_FRAGMANT() { return getToken(TQLParser.COLUMN_NAME_FRAGMANT, 0); }
		public AliasTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).enterAliasTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TQLListener ) ((TQLListener)listener).exitAliasTable(this);
		}
	}

	public final AliasTableContext aliasTable() throws RecognitionException {
		AliasTableContext _localctx = new AliasTableContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_aliasTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(COLUMN_NAME_FRAGMANT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
